@startuml Diagrama1_EntityRepository
title Clasele Entity și Repository — Modulul Recepție

skinparam classBackgroundColor #FFF8E7
skinparam classBorderColor #8B6914
skinparam classHeaderBackgroundColor #C8A020
skinparam classHeaderFontColor #000000
skinparam classAttributeFontSize 10
skinparam classFontSize 11
skinparam arrowColor #555555
skinparam packageBackgroundColor #FFFDF5
skinparam packageBorderColor #C8A020
skinparam defaultFontSize 10
skinparam linetype ortho

left to right direction

' ── ENTITY ──────────────────────────────────────────────────────────
package "entity" {

    abstract class AbstractEntity {
        # id : Long
        # version : Integer
    }

    abstract class Document {
        # tipDocument : String
        # numarDocument : String
        # dataDocument : Date
        + getTipDocument() : String
        + setTipDocument(tip : String)
    }

    class DocInsotitor {
        - mijlocTransport : String
        + addReceptie(r : Receptie)
        + removeReceptie(r : Receptie)
        + getReceptii() : List<Receptie>
        + setFurnizor(f : Furnizor)
        + setDocInsotitorReferinta(d : DocInsotitor)
    }

    class Receptie {
        - nrNIR : String
        - dataReceptie : Date
        + addLinieIntrare(l : LinieIntrare)
        + removeLinieIntrare(l : LinieIntrare)
        + getLiniiIntrare() : List<LinieIntrare>
        + setGestiune(g : Gestiune)
    }

    class LinieIntrare {
        - cantitate : Double
        - pretAchizitie : Double
        - pretVanzare : Double
        + getCantitate() : Double
        + setCantitate(c : Double)
        + setProdus(p : Produs)
    }

    class Furnizor {
        - codFurnizor : String
        - numeFurnizor : String
        - cui : String
        - sold : Double
    }

    class Gestiune {
        - codGestiune : String
        - denumireGestiune : String
        - numeGestionar : String
    }

    class Produs {
        - codProdus : String
        - denumire : String
        - um : String
        - costMediuPonderat : Double
    }

    class Stoc {
        - stocCurent : Double
        - stocInitialLuna : Double
        + getStocCurent() : Double
        + setStocCurent(s : Double)
    }
}

' ── REPOSITORY ───────────────────────────────────────────────────────
package "repository" {

    abstract class AbstractRepository {
        - em : EntityManager
        + beginTransaction()
        + commitTransaction()
        + create(o : Object) : Object
        + update(o : Object) : Object
        + delete(o : Object)
        + getEm() : EntityManager
    }

    class MasterRepository {
        + findFurnizoriAll() : List<Furnizor>
        + findFurnizorById(id : Long) : Furnizor
        + addFurnizor(f : Furnizor) : Furnizor
        + findGestiuniAll() : List<Gestiune>
        + addGestiune(g : Gestiune) : Gestiune
        + findProduseAll() : List<Produs>
        + addProdus(p : Produs) : Produs
        + findStocByProdusGestiune(pid : Long, gid : Long) : List<Stoc>
        + addStoc(s : Stoc) : Stoc
        + updateStoc(s : Stoc) : Stoc
    }

    class DocumentRepository {
        + saveDocInsotitor(d : DocInsotitor) : DocInsotitor
        + findDocInsotitoriAll() : List<DocInsotitor>
        + saveReceptie(r : Receptie) : Receptie
        + findReceptiiAll() : List<Receptie>
    }
}

' ── RELATII ENTITY ───────────────────────────────────────────────────
AbstractEntity  <|-- Document
Document        <|-- DocInsotitor
AbstractEntity  <|-- Receptie
AbstractEntity  <|-- LinieIntrare
AbstractEntity  <|-- Furnizor
AbstractEntity  <|-- Gestiune
AbstractEntity  <|-- Produs
AbstractEntity  <|-- Stoc

DocInsotitor "1" *-- "0..*" Receptie     : receptii >
DocInsotitor "*" -->  "1"   Furnizor     : furnizor >
DocInsotitor    -->  "0..1" DocInsotitor : referinta >
Receptie     "1" *-- "0..*" LinieIntrare : liniiIntrare >
Receptie        -->  "1"    Gestiune     : gestiune >
LinieIntrare    -->  "1"    Produs       : produs >
Stoc            -->  "1"    Produs
Stoc            -->  "1"    Gestiune

' ── RELATII REPOSITORY ───────────────────────────────────────────────
AbstractRepository <|-- MasterRepository
AbstractRepository <|-- DocumentRepository

@enduml
